--- a/mold.1.html
+++ b/mold.1.html
@@ -2,7 +2,7 @@
 <STYLE>
 .body {
   max-width: 600px;
-  margin: 3em auto 3em;
+  margin: 3em auto;
   line-height: 1.4em;
   font-family: arial;
 }
