--- a/mold.html
+++ b/mold.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML><HEAD><TITLE>Man page of MOLD</TITLE>
 <STYLE>
-.body {
+body {
   max-width: 600px;
   margin: 3em auto;
   line-height: 1.4em;
