--- a/mold.html
+++ b/mold.html
@@ -325,11 +325,7 @@
     <p class="Pp"></p>
   </dd>
   <dt id="m"><a class="permalink" href="#m"><code class="Fl">-m</code></a>
-    [<a class="permalink" href="#elf_x86_64"><b class="Sy" id="elf_x86_64">elf_x86_64</b></a>
-    |
-    <a class="permalink" href="#elf_i386"><b class="Sy" id="elf_i386">elf_i386</b></a>
-    |
-    <a class="permalink" href="#aarch64linux"><b class="Sy" id="aarch64linux">aarch64linux</b></a>]</dt>
+    [<var class="Ar">target</var>]</dt>
   <dd>Choose a target.
     <p class="Pp"></p>
   </dd>
